--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,12 +15,12 @@ permissions:
 jobs:
   build:
 
-    #runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
-    #- uses: actions/checkout@v4
-    #- name: Set up Python 3.10
-    #  uses: actions/setup-python@v3
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
       with:
         python-version: "3.10"
     - name: Install dependencies
